tests/invalid/For_Invalid_10.whiley
method test():
    // Clearly, not a good idea
    for i in 0..5:
        i = 0